--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -6,7 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
 </head>
-<body>
+<body> 
+    <h1>My First Webpage</h1>
+    <h2>Written with a little guidance from Moringa School</h2>
+
         <p>Hello, world!</p>
     <p>Welcome to my first webpage!</p>
 
