--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body> 
-    <h1>My First Webpage</h1>
+    <h1><strong> First Webpage</strong></h1>
     <h2>Written with a little guidance from Moringa School</h2>
 
         <p>Hello, world!</p>
@@ -19,7 +19,9 @@
             <li>JavaScript</li>
             <li>And beyond!</li>
           </ol>
-
-    
+          <p>Check out <a href="http://moringaschool.com/">Moringa School</a>. It's a great place to learn web development skills!</p>
+          <p>Here is a link to my <a href="favorite-things.html">favorite things</a>.</p>
+          <img src="https://images.pexels.com/photos/1054655/pexels-photo-1054655.jpeg?" alt='Elephant' height='300' width='500'>
+          
 </body>
 </html>
