styling with css

--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link href="my-first-webpage.css" rel="stylesheet" type="text/css">
+
 </head>
 <body> 
     <h1><strong> First Webpage</strong></h1>
@@ -18,10 +20,10 @@
             <li>CSS</li>
             <li>JavaScript</li>
             <li>And beyond!</li>
-          </ol>
+    </ol>
           <p>Check out <a href="http://moringaschool.com/">Moringa School</a>. It's a great place to learn web development skills!</p>
           <p>Here is a link to my <a href="favorite-things.html">favorite things</a>.</p>
           <img src="https://images.pexels.com/photos/1054655/pexels-photo-1054655.jpeg?" alt='Elephant' height='300' width='500'>
-          
+
 </body>
 </html>
